# libcontain

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  libcontain.pc.cmake.in  libcontain.pc.in
.github/workflows/: ci.yml
benchmarks/: bench_deque.c  bench_hashmap.c  bench_hashset.c  bench_linkedlist.c  bench_pipeline.c  bench_pipeline2.c  bench_typed_vs_generic.c  bench_vector.c  bench_vs_cpp.cpp  bench_vs_klib.c  bench_vs_stb_ds.c  bench_vs_uthash.c
docs/: README.md  api.md  chainer.md  chainer2.md  configuration.md  container.md  examples.md  iterator.md  typed.md
include/contain/: allocator.h  chainer.h  chainer2.h  contain.h  container.h  deque.h  hashmap.h  hashset.h  iterator.h  lc_utils.h  linkedlist.h  typed.h  vector.h
include/contain/typed/: deque.h  hashmap.h  hashset.h  linkedlist.h  vector.h
scripts/: bench.sh  build.sh  clean.sh  format.sh  install.sh  release.sh  setup.sh  test.sh  uninstall.sh
src/: allocator.c  deque.c  hashmap.c  hashset.c  linkedlist.c  vector.c
tests/: allocator_test.c  assertion.h  chainer2_test.c  chainer_test.c  deque_test.c  hashmap_test.c  hashset_test.c  iterator_test.c  linkedlist_test.c  timer.h  tour.c  typed_test.c  vector_test.c
